app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: color
  namespace: prod
  labels:
    app: color

spec:
  replicas: 2
  selector:
    matchLabels:
      app: color
  template: 
    metadata:
      labels:
        app: color
    spec:
      containers:
        - name: color
          image: redeagleindocker/colors:v1
          ports:
            - containerPort: 5000
