app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: custom-service
  namespace: prod
spec:
  type: NodePort
  selector:
    app: color 
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30007
