app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: custom-service-ingress
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: edu.ysu.am
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: custom-service
            port:
              number: 5000
